--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000
 VITE_APP_NAME=Grace Community Church
 VITE_APP_VERSION=1.0.0
