--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "wouter": "^3.7.1",
